# wiki

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml  wikiai.db
apps/api/app/: auth.py  config.py  data.py  database.py  db_models.py  main.py  models.py  repository.py  seed.py  services.py
apps/api/tests/: conftest.py  test_api.py
apps/web/: eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/articles/[slug]/: page.tsx
apps/web/app/contributors/: page.tsx
apps/web/app/review/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/signin/: page.tsx
apps/web/components/: site-header.tsx  ui.tsx
apps/web/lib/: api.ts  mock.ts  types.ts
docs/context/: architecture.md  product.md  roadmap.md
docs/execution/: current_task.md  review_notes.md  test_evidence.md  work_log.md
docs/standards/: ai_agent_rules.md  api_rules.md  conventions.md  testing.md
infra/sql/: 001_init.sql
