[project]
name = "wikiai-api"
version = "0.1.0"
description = "WikiAI MVP API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
